--- a/admin/backoffice_magento_orders.phtml
+++ b/admin/backoffice_magento_orders.phtml
@@ -193,7 +193,11 @@ div.ps {
 																	</select>
 																</td>
 																<td>
-																	
+																	<select name="D_GROUP" class="form-control form-filter input-sm">
+																		<option value="">All</option>
+																		<option value="1">Prime</option>
+																		<option value="4">Guest</option>
+																	</select>
 																</td>
 															</tr>
 														</thead>
