--- a/admin/customer_manage_customer_detail.phtml
+++ b/admin/customer_manage_customer_detail.phtml
@@ -224,7 +224,7 @@
 
 	if shopper_company_id > 5 then
 		sql = "SELECT company_name FROM " & g_storeid & "_company WHERE company_id=" & shopper_company_id
-		Set rsCompany = Conn.Execute(sql)
+		Set rsCompany = dbconn.Execute(sql)
 		
 		if not rsCompany.EOF then
 			shopper_company_name = rsCompany("company_name")
@@ -242,6 +242,18 @@
 	else
 		returnPage = Request.ServerVariables("HTTP_REFERER")
 	end if
+	
+	'=============================================================================
+	' Credit
+	'=============================================================================
+	credit_amount = 0
+	sql = "SELECT end_transaction FROM " & g_storeid & "_credit_history WHERE customer_id = '" & shopper_id & "' ORDER BY credit_history_id DESC"
+	Set rsCredit = dbconn.Execute(sql)
+	if not rsCredit.EOF then
+		credit_amount = rsCredit(0)
+	end if
+	rsCredit.Close
+	'=============================================================================
 
 
 %>
@@ -250,6 +262,9 @@
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
 <link rel="stylesheet" href="assets/plugins/jquery-ui/jquery-ui-1.10.4.custom.min.css" />
+<link href="../assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />
 <!-- END PAGE LEVEL PLUGINS -->
 <!--#INCLUDE FILE="include/head_bottom.phtml"-->
 </head>
@@ -349,12 +364,24 @@
 															</li>
 															<% if shopper_id = "0" then %>
 															<% else %>
-															<!--
 															<li class="">
 																<a href="#panel_tab4_example5" data-toggle="tab">
-																	<i class="blue fa fa-user"></i> Orders
+																	Orders
 																</a>
 															</li>
+															<li class="">
+																<a href="#panel_tab4_example6" data-toggle="tab">
+																	Credit History
+																</a>
+															</li>
+															<% if g_enable_backoffice = "1" then %>
+															<li class="">
+																<a href="#panel_tab4_example10" data-toggle="tab">
+																	Backoffice
+																</a>
+															</li>
+															<% end if %>
+															<!--
 															<li class="">
 																<a href="#panel_tab4_example6" data-toggle="tab">
 																	<i class="fa fa-rocket"></i> Wishlist
@@ -984,7 +1011,7 @@
 																<div class="row">
 																	<div class="col-md-12 col-sm-12">
 																		<div class="portlet green-soft box">
-																			<div class="portlet-title">
+																			<div class="portlet-title">	
 																				<div class="caption">
 																					<i class="fa fa-cogs"></i>Authorization </div>
 																				<div class="actions">
@@ -1024,6 +1051,95 @@
 																	</div>
 																</div>
 															</div>
+															
+															<div class="tab-pane" id="panel_tab4_example5">
+<div class="table-container">
+	<table class="table table-striped table-bordered table-hover table-checkable" id="datatable_ajax">
+		<thead>
+			<tr role="row" class="heading">
+				<th width="2%">
+					<label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
+						<input type="checkbox" class="group-checkable" data-set="#sample_2 .checkboxes" />
+						<span></span>
+					</label>
+				</th>
+				<th width="8%"> Order&nbsp;# </th>
+				<th width="15%"> Date </th>
+				<th width="150"> Bill&nbsp;To </th>
+				<th width="150"> Ship&nbsp;To </th>
+				<th width="10%"> Amount </th>
+				<th width="10%"> Status </th>
+				<th width="5%"> Quote </th>
+				<th width="5%"> P.O </th>
+				<th width="5%"> Actions </th>
+			</tr>
+		</thead>
+		<tbody></tbody>
+	</table>
+</div>
+																
+															</div>
+															
+															<div class="tab-pane" id="panel_tab4_example6">
+															
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h3 class="panel-title">Manual Adjustment</h3>
+	</div>
+	<div class="panel-body">
+		<div class="form-group">
+			<label class="col-sm-2 control-label" for="amount_credit">
+				Current Balance
+			</label>
+			<label class="col-sm-4 control-label" for="amount_credit" style="text-align:left">
+				$<span id="beginning_transaction"><%=FormatNumber(credit_amount,2)%></span>
+			</label>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-2 control-label" for="amount_credit">
+				Manual Adjustment
+			</label>
+			<div class="col-sm-4">
+				<input type="text" placeholder="" class="form-control input-sm" id="amount_credit" name="amount_credit" value="">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-2 control-label" for="credit_comment">
+				Comment
+			</label>
+			<div class="col-sm-6">
+				<textarea class="form-control input-sm" rows="3" id="credit_comment" name="credit_comment"></textarea>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h3 class="panel-title">Transactions</h3>
+	</div>
+	<div class="panel-body">
+		<div class="table-container">
+			<table class="table table-striped table-bordered table-hover table-checkable" id="datatable_customer_credit_history">
+				<thead>
+					<tr role="row" class="heading">
+						<th width="8%"> ID</th>
+						<th width="120"> Transaction Time </th>
+						<th width="120"> Type </th>
+						<th width="20"> Transaction Detail </th>
+						<th width="10%"> Amount </th>
+						<th width="5%"> Balance </th>
+					</tr>
+				</thead>
+				<tbody> </tbody>
+			</table>
+		</div>
+	</div>
+</div>
+															
+															</div>
+															<div class="tab-pane" id="panel_tab4_example10">
+																Back Office
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1058,11 +1174,16 @@
 <script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
 <script src="../assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
 <script src="../assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
+<script src="../assets/global/scripts/datatable.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL PLUGINS -->
 
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script language="javascript">
 var savebutton = "1";
+var grid;
 </script>
 <script language="javascript">
 var FormValidator = function () {
@@ -1103,6 +1224,9 @@ var FormValidator = function () {
 					},
 					shopper_password_new: {
 						minlength: 8
+					},
+					amount_credit : {
+						currency: ["$", false] 
 					}
 				},
 				
@@ -1118,7 +1242,8 @@ var FormValidator = function () {
 					error1.show();
 					App.scrollTo(error1, -200);
 				},
-
+				
+				/*
 				errorPlacement: function (error, element) { // render error placement for each input type
 					var cont = $(element).parent('.input-group');
 					if (cont) {
@@ -1127,7 +1252,7 @@ var FormValidator = function () {
 						element.after(error);
 					}
 				},
-
+				*/
 				highlight: function (element) { // hightlight error inputs
 
 					$(element)
@@ -1161,6 +1286,16 @@ var FormValidator = function () {
 							setTimeout(function () {
 									window.location.replace("customer_manage_customer.phtml");
 								}, 500);
+							}
+							else
+							{
+								grid.getDataTable().ajax.reload();
+								x = parseFloat($("#beginning_transaction").text()) + parseFloat($("#amount_credit").val());
+								$("#amount_credit").val('');
+								$("#credit_comment").val('');
+								$("#beginning_transaction").text(x.toFixed(2));
+								
+								
 							}
 							
 						},
@@ -1282,9 +1417,130 @@ var FormValidator = function () {
 	};
 }();
 </script>
+
+<script type="text/javascript">
+
+var oTable;
+var oTabel2;
+var v1 = "All";
+var v2 = "All";
+var v3 = "All";
+	
+var TableDatatablesAjax = function () {
+
+    var initPickers = function () {
+        //init date pickers
+        $('.date-picker').datepicker({
+            rtl: App.isRTL(),
+            autoclose: true
+        });
+    }
+	
+	
+	
+    var handleDemo1 = function () {
+
+        grid = new Datatable();
+
+        grid.init({
+            src: $("#datatable_customer_credit_history"),
+            onSuccess: function (grid, response) {
+                // grid:        grid object
+                // response:    json object of server side ajax response
+                // execute some code after table records loaded
+            },
+            onError: function (grid) {
+                // execute some code on network or other general error  
+            },
+            onDataLoad: function(grid) {
+                // execute some code on ajax data load
+            },
+            loadingMessage: 'Loading...',
+            dataTable: { // here you can define a typical datatable settings from http://datatables.net/usage/options 
+
+                // Uncomment below line("dom" parameter) to fix the dropdown overflow issue in the datatable cells. The default datatable layout
+                // setup uses scrollable div(table-scrollable) with overflow:auto to enable vertical scroll(see: assets/global/scripts/datatable.js). 
+                // So when dropdowns used the scrollable div should be removed. 
+                //"dom": "<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'<'table-group-actions pull-right'>>r>t<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'>>",
+                columnDefs: [ 
+					{ orderable: false, targets: [0,1,2,3,4,5] },
+					{ className: "text-center", targets: [3] },
+					{ className: "text-right", targets: [4,5] }
+				],
+					
+                "bStateSave": true, // save datatable state(pagination, sort, etc) in cookie.
+
+                "lengthMenu": [
+                    [10, 20, 50, 100, 150, -1],
+                    [10, 20, 50, 100, 150, "All"] // change per page values here
+                ],
+                "pageLength": 20, // default record count per page
+                "ajax": {
+                    "url": "api/sp_customer_credit_history.phtml?shopper_id=<%=shopper_id%>", // ajax source
+                },
+                "order": [
+                    [0, "desc"]
+                ]// set first column as a default sort by asc
+            }
+        });
+
+        // handle group actionsubmit button click
+        grid.getTableWrapper().on('click', '.table-group-action-submit', function (e) {
+            e.preventDefault();
+            var action = $(".table-group-action-input", grid.getTableWrapper());
+            if (action.val() != "" && grid.getSelectedRowsCount() > 0) {
+                grid.setAjaxParam("customActionType", "group_action");
+                grid.setAjaxParam("customActionName", action.val());
+                grid.setAjaxParam("id", grid.getSelectedRows());
+                grid.getDataTable().ajax.reload();
+                grid.clearAjaxParams();
+            } else if (action.val() == "") {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'Please select an action',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            } else if (grid.getSelectedRowsCount() === 0) {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'No record selected',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            }
+        });
+
+        //grid.setAjaxParam("customActionType", "group_action");
+        //grid.getDataTable().ajax.reload();
+        //grid.clearAjaxParams();
+    }
+	
+    return {
+
+        //main function to initiate the module
+        init: function () {
+
+            initPickers();
+            handleDemo1();
+        },
+		
+		submitFilter: function () {
+
+            grid.submitFilter();
+        }
+
+    };
+
+}();
+
+</script>
+
 <script>
 	jQuery(document).ready(function() {
-		//Main.init();
+		TableDatatablesAjax.init();
 		FormValidator.init();
 		
 		//////////////////////////////////////////////////////////////////////////////////////////////////////
