--- a/admin/marketing_coupons.phtml
+++ b/admin/marketing_coupons.phtml
@@ -7,6 +7,7 @@
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
 <!-- END PAGE LEVEL PLUGINS -->
+<!--#INCLUDE FILE="include/head_bottom.phtml"-->
 </head>
 
 <body class="page-container-bg-solid">
@@ -28,8 +29,7 @@
 						<div class="container-fluid">
 							<!-- BEGIN PAGE TITLE -->
 							<div class="page-title">
-								<h1>Dashboard
-									<small>dashboard & statistics</small>
+								<h1>Coupons
 								</h1>
 							</div>
 							<!-- END PAGE TITLE -->
