--- a/admin/sales_order.phtml
+++ b/admin/sales_order.phtml
@@ -51,6 +51,7 @@
 														Create New Order
 													</a>
 													<div class="btn-group">
+														<!--
 														<a class="btn green-haze btn-outline btn-circle" href="javascript:;" data-toggle="dropdown">
 															<i class="fa fa-share"></i>
 															<span class="hidden-xs"> Tools </span>
@@ -64,13 +65,12 @@
 															<li>
 																<a href="javascript:;"> Export to XML </a>
 															</li>
-															<!--
 															<li class="divider"> </li>
 															<li>
 																<a href="javascript:;"> Print Invoices </a>
 															</li>
-															-->
 														</ul>
+														-->
 													</div>
 												</div>
 											</div>
@@ -82,13 +82,12 @@
 															<option value="">Select...</option>
 															<option value="Print">Print</option>
 															<option value="">Change Status to ...</option>
-															<option value="Pending">..........Pending</option>
-															<option value="Authorized">..........Authorized</option>
-															<option value="Onhold">..........On Hold</option>
-															<option value="Shipped">..........Shipped</option>
-															<option value="Partial">..........Partially Shipped</option>
-															<option value="Incomplete">..........Incompleted</option>
-															<option value="Canceled">..........Cancelled</option>
+															<option value="pending">..........Pending</option>
+															<option value="processing">..........Processing</option>
+															<option value="holded">..........On Hold</option>
+															<option value="complete">..........Complete</option>
+															<option value="closed">..........Closed</option>
+															<option value="closed">..........Cancelled</option>
 															<option value="Export">Export</option>
 															<option value="Duplicate">Duplicate</option>
 															<option value="Delete">Delete</option>
@@ -112,7 +111,6 @@
 																<th width="10%"> Amount </th>
 																<th width="10%"> Status </th>
 																<th width="5%"> Quote </th>
-																<th width="5%"> P.O </th>
 																<th width="5%"> Actions </th>
 															</tr>
 															<tr role="row" class="filter">
@@ -152,20 +150,16 @@
 																<td>
 																	<select name="order_status" class="form-control form-filter input-sm">
 																		<option value="">Select...</option>
-																		<option value="Pending">Pending</option>
-																		<option value="Authorized">Authorized</option>
-																		<option value="Onhold">On Hold</option>
-																		<option value="Shipped">Shipped</option>
-																		<option value="Partial">Partially Shipped</option>
-																		<option value="Incomplete">Incompleted</option>
-																		<option value="Canceled">Cancelled</option>
+																		<option value="pending">Pending</option>
+																		<option value="processing">Processing</option>
+																		<option value="holded">On Hold</option>
+																		<option value="complete">Complete</option>
+																		<option value="closed">Closed</option>
+																		<option value="canceled">Canceled</option>
 																	</select>
 																</td>
 																<td>
 																	<input type="text" class="form-control form-filter input-sm" name="order_quote"> 
-																</td>
-																<td>
-																	<input type="text" class="form-control form-filter input-sm" name="order_po"> 
 																</td>
 																<td>
 																	<div class="margin-bottom-5">
@@ -256,6 +250,7 @@ var oTabel2;
 var v1 = "All";
 var v2 = "All";
 var v3 = "All";
+var grid
 	
 var TableDatatablesAjax = function () {
 
@@ -269,7 +264,7 @@ var TableDatatablesAjax = function () {
 
     var runDataTable = function () {
 
-        var grid = new Datatable();
+        grid = new Datatable();
 
         grid.init({
             src: $("#datatable_ajax"),
@@ -292,7 +287,7 @@ var TableDatatablesAjax = function () {
                 // So when dropdowns used the scrollable div should be removed. 
                 //"dom": "<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'<'table-group-actions pull-right'>>r>t<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'>>",
                 columnDefs: [ 
-					{ orderable: false, targets: [0,7,8,9] },
+					{ orderable: false, targets: [0,7,8] },
 					{ className: "text-center", targets: [6,7,8] },
 					{ className: "text-right", targets: [5] }
 				],
@@ -308,7 +303,7 @@ var TableDatatablesAjax = function () {
                     "url": "api/sp_order_list.phtml", // ajax source
                 },
                 "order": [
-                    [1, "asc"]
+                    [2, "desc"]
                 ]// set first column as a default sort by asc
             }
         });
@@ -399,6 +394,11 @@ var TableDatatablesAjax = function () {
             initPickers();
             runDataTable();
 			runDataTable2();
+        },
+		
+		 submitFilter: function () {
+
+            grid.submitFilter();
         }
 
     };
@@ -407,6 +407,12 @@ var TableDatatablesAjax = function () {
 
 jQuery(document).ready(function() {
     TableDatatablesAjax.init();
+	$('.form-filter').keypress(function (e) {
+	  if (e.which == 13) {
+		TableDatatablesAjax.submitFilter();
+		return false; 
+	  }
+	});
 });	
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
